--- a/ReptilsAmfibis/src/main/java/application/Sample.fxml
+++ b/ReptilsAmfibis/src/main/java/application/Sample.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="application.SampleController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <bottom>
       <Pane prefHeight="468.0" prefWidth="605.0" BorderPane.alignment="CENTER">
          <children>
@@ -26,7 +25,7 @@
             <Label layoutX="43.0" layoutY="317.0" text="Estat" />
             <ComboBox fx:id="cbEstat" layoutX="96.0" layoutY="313.0" onAction="#habilitaDesa" prefHeight="25.0" prefWidth="183.0" />
             <Label layoutX="362.0" layoutY="175.0" text="Descripció" />
-            <TextArea fx:id="txaDescripcio" layoutX="344.0" layoutY="209.0" onInputMethodTextChanged="#habilitaDesa" prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="txaDescripcio" layoutX="344.0" layoutY="209.0" onInputMethodTextChanged="#habilitaDesa" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
             <Button fx:id="btnDesa" disable="true" layoutX="98.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#desaAnimal" prefHeight="25.0" prefWidth="177.0" text="Desar canvis" />
             <Button fx:id="btnAnterior" layoutX="344.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#animalAnterior" text="Anterior" />
             <Button fx:id="btnSeguent" layoutX="444.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#animalSeguent" prefHeight="25.0" prefWidth="72.0" text="Següent" />
