--- a/ReptilsAmfibis/src/main/java/application/Sample.fxml
+++ b/ReptilsAmfibis/src/main/java/application/Sample.fxml
@@ -19,13 +19,13 @@
             <Label layoutX="289.0" layoutY="93.0" text="Ordre" />
             <ComboBox fx:id="cbOrdre" layoutX="351.0" layoutY="89.0" onAction="#carregaAnimals" prefHeight="25.0" prefWidth="205.0" />
             <Label layoutX="44.0" layoutY="215.0" text="Nom" />
-            <TextField fx:id="txtNom" layoutX="96.0" layoutY="211.0" onInputMethodTextChanged="#habilitaDesa" prefHeight="25.0" prefWidth="181.0" />
+            <TextField fx:id="txtNom" layoutX="96.0" layoutY="211.0" onKeyPressed="#habilitaDesatxt" prefHeight="25.0" prefWidth="181.0" />
             <Label layoutX="43.0" layoutY="267.0" text="Especia" />
-            <TextField fx:id="txtEspecia" layoutX="96.0" layoutY="263.0" onInputMethodTextChanged="#habilitaDesa" prefHeight="25.0" prefWidth="182.0" />
+            <TextField fx:id="txtEspecia" layoutX="96.0" layoutY="263.0" onKeyPressed="#habilitaDesatxt" prefHeight="25.0" prefWidth="182.0" />
             <Label layoutX="43.0" layoutY="317.0" text="Estat" />
             <ComboBox fx:id="cbEstat" layoutX="96.0" layoutY="313.0" onAction="#habilitaDesa" prefHeight="25.0" prefWidth="183.0" />
             <Label layoutX="362.0" layoutY="175.0" text="Descripció" />
-            <TextArea fx:id="txaDescripcio" layoutX="344.0" layoutY="209.0" onInputMethodTextChanged="#habilitaDesa" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
+            <TextArea fx:id="txaDescripcio" layoutX="344.0" layoutY="209.0" onKeyPressed="#habilitaDesatxt" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
             <Button fx:id="btnDesa" disable="true" layoutX="98.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#desaAnimal" prefHeight="25.0" prefWidth="177.0" text="Desar canvis" />
             <Button fx:id="btnAnterior" layoutX="344.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#animalAnterior" text="Anterior" />
             <Button fx:id="btnSeguent" layoutX="444.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#animalSeguent" prefHeight="25.0" prefWidth="72.0" text="Següent" />
